src/components/commons/index.scss
$base-color: #335bcf;
$base-hover-color: rgb(50, 82, 177);
$tool-tip-color: rgb(20, 20, 20);
$itemGrow: 1.2;
$duration: 250ms;

input:focus,
textarea:focus,
select:focus {
  outline: none !important;
}

.rounded {
  &.text-blue-700 {
    color: $base-color;
  }

  &.border-blue-700 {
    border-color: $base-color;
  }

  &.hover\:bg-blue-700:hover {
    background: $base-color;
  }

  &.hover\:text-blue-700:hover {
    color: $base-color;
  }

  &.bg-blue-700 {
    background: $base-color;
  }

  &.hover\:bg-blue-800:hover {
    background: $base-hover-color;
  }

  &.mr-2 {
    outline: none;
  }
}

input {
  &.input {
    outline: none;
  }
}

.thin {
  font-weight: lighter;

  &.rounded {
    font-weight: lighter;
  }
}

.bg-transparent,
.text-blue-700 {
  color: $base-color;
}

.border-blue-700 {
  border-color: $base-color;
}

.hover\:bg-blue-700:hover {
  background: $base-color;
}

.hover\:text-blue-700:hover {
  color: $base-color;
}

.bg-blue-700 {
  background: $base-color !important;
}

.hover\:bg-blue-800:hover {
  background: $base-hover-color;
}

.hover\:text-blue-700:hover {
  color: $base-color !important;
}

button,
input {
  outline: none;
}

button:disabled {
  cursor: not-allowed;
}

.tooltip {
  &.container {
    animation: flip 1000ms linear normal infinite;
    background: $tool-tip-color;
    height: 20px;
    position: absolute;
    right: 10%;
    top: -10px;
    width: 20px;
  }
}

@keyframes flip {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

.sunken {
  box-shadow: 1px 1px 5px #ccc inset;
}

.searchContainer {
  max-height: calc(50vh);
}

.searchItem:hover {
  cursor: pointer;
}

.cursor-pointer:hover {
  font-size: 18px;
}

.faHeart {
  color: rgb(241, 221, 221);
}

.liked {
  color: red;
}

.big-article {
  max-height: 390px;
}

.control-arrow:hover {
  background: transparent !important;
}

.current-slider-anim1 {
  transition: opacity 500ms ease-in-out;
  animation: spy 500ms linear;
}

.current-slider-anim2 {
  transition: opacity 500ms ease-in-out;
  animation: spy2 500ms linear;
}

@keyframes spy {
  0% {
    opacity: 0;
  }

  40% {
    opacity: .2;
  }

  100% {
    opacity: 1;
  }
}

@keyframes spy2 {
  0% {
    opacity: 0;
  }

  40% {
    opacity: .2;
  }


  100% {
    opacity: 1;
  }
}

::-webkit-scrollbar {
  display: none;
}

.slider-image {
  min-width: 300px;
}

.card {
  display: flex;
  min-width: 100%;
  max-height: 300px;
  overflow-x: auto;
}

.card::-webkit-scrollbar {
  display: none;
}

.card--content {
  min-width: 250px;
  max-width: 250px;
  margin-right: 20px;
}

.search-image {
  min-width: 115px;
  overflow: hidden;
  height: 105px;
}

